Added installation instructions

--- a/captioner/vignettes/using_captioner.Rmd
+++ b/captioner/vignettes/using_captioner.Rmd
@@ -12,4 +12,21 @@ output:
     toc: yes
 ---
 
-Captioner is a lightweight R package that allows you to store figure and table captions and print them later.  It also automatically numbers the captions so that you don't have to renumber each time you rearrange them.  This is particularly useful for [R markdown documents](http://rmarkdown.rstudio.com/), which do not currently automatically number captions.
+`captioner` is a lightweight R package that allows you to store figure and table captions and print them later.  It also automatically numbers the captions so that you don't have to renumber each time you rearrange them.  This is particularly useful for [R markdown documents](http://rmarkdown.rstudio.com/), which do not currently automatically number captions.
+
+# Installation
+
+`captioner` can be installed via Github.
+
+Install `devtools` if you haven't already:
+
+```{r devtools, eval = FALSE}
+install.packages("devtools")
+```
+
+Now install `captioner`:
+
+```{r captioner, eval = FALSE}
+devtools::install_github("adletaw/captioner/captioner")
+```
+
