Removed author, table of contents

--- a/captioner/vignettes/using_captioner.Rmd
+++ b/captioner/vignettes/using_captioner.Rmd
@@ -5,11 +5,9 @@
 
 ---
 title: "Using captioner"
-author: "Alathea DL"
-date: "January 2015"
 output:
-  html_document:
-    toc: yes
+  html_document: default
+date: "January 2015"
 ---
 
 `captioner` is a lightweight R package that allows you to store figure and table captions and print them later.  It also automatically numbers the captions so that you don't have to renumber each time you rearrange them.  This is particularly useful for [R markdown documents](http://rmarkdown.rstudio.com/), which do not currently automatically number captions.
