added pdf vignette

--- a/vignettes/using_captioner.Rmd
+++ b/vignettes/using_captioner.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Using captioner"
-output: rmarkdown::html_vignette
+output: pdf_document
 date: "January 2015"
 vignette: >
   %\VignetteEngine{knitr::knitr}
