Added the CRAN badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ library(captioner)
 ```
 
 [![Build Status](https://travis-ci.org/adletaw/captioner.png?branch=master)](https://travis-ci.org/adletaw/captioner)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/captioner)](http://cran.r-project.org/package=captioner)
 
 *captioner* is an R package for generating figure numbers and captions
 
