--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ library(captioner)
 
 **Installation**
 
-to install:
+*captioner* is now available on CRAN.  If you would like to install the current development version:
 
 * `install.packages("devtools")`
 * `devtools::install_github("adletaw/captioner")`
