updated examples in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ For example, you can generate a full caption:
 
 ```{r ex_1}
 fig_nums <- captioner()
-fig_nums("my_pretty_figure", "my pretty figure's caption")
+fig_nums("my_pretty_figure", "My pretty figure's caption.")
 ```
 
 Or a figure number for citing:
@@ -53,7 +53,8 @@ fig_nums("my_pretty_figure", display = "cite")
 Or you can store the caption and use it in your R code chunk in markdown documents:
 
 ```{r ex_3}
-my_first_caption <- fig_nums("my pretty_figure", "My pretty figure's caption.")
+my_first_caption <- fig_nums("my_other_figure", "My other figure's caption.")
+my_first_caption
 ```
 
 If you create a new set of captions, perhaps for your tables, the numbering restarts:
