--- a/README.Rmd
+++ b/README.Rmd
@@ -47,11 +47,13 @@ fig_nums <- captioner()
 fig_nums("my_pretty_figure", "My pretty figure's caption.")
 ```
 
-Or a figure number for citing:
+You can also generate a figure reference:
 
 ```{r ex_2}
 fig_nums("my_pretty_figure", display = "cite")
 ```
+
+Which can be displayed inline using inline code chunks, like so (`r fig_nums("my_pretty_figure", display = "cite")`).
 
 You can also store the caption and use it in your R code chunk in markdown documents:
 
